kms_busy failed on chrome OS
Test kms_busy on chrome book device but failed. We found following error while restoring some settings.
openat(AT_FDCWD, "/sys/dev/char/226:0", O_RDONLY) = 12
openat(12, "dev", O_RDONLY) = 13
read(13, "226:0\n", 1023) = 6
close(13) = 0
openat(12, "engine", O_RDONLY) = 13
close(12) = 0
openat(13, "XR24", O_RDONLY) = -1 ENOENT (No such file or directory)
The files under "/sys/dev/char/226:0/engine" should be rcs0, vcs0 etc. Not sure why the file name become "XR24" there.